# cmake-stm32

./: .gitmodules  CMakeLists.txt  Makefile  README.md  arm-none-eabi.cmake  stm32conf.cmake  stm32l4.cmake
.github/workflows/: build.yml
cmake/: FindSTM32Cube.cmake  arm-none-eabi.cmake  cortex-m4.cmake  stm32cube.cmake  stm32cube_drivers.cmake  stm32cubel4.cmake
examples/blinky/: CMakeLists.txt
examples/blinky-hal/: CMakeLists.txt  main.c
examples/blinky-ll/: CMakeLists.txt  CMakePresets.json  main.c
examples/blinky-ll/src/board/common/include/: board.h
examples/blinky-ll/src/board/stm32l412/: board.c
examples/blinky-multiboard/: CMakeLists.txt
examples/blinky-multiboard/src/board/: CMakeLists.txt
examples/blinky-multiboard/src/board/nucleo-l412/: CMakeLists.txt
examples/blinky-multiboard/src/board/nucleo-l476/: CMakeLists.txt  board.c
examples/blinky/src/board/: CMakeLists.txt
examples/blinky/src/board/stm32l412/: CMakeLists.txt
examples/blinky/src/board/stm32l476/: CMakeLists.txt
src/app/: main.c
src/board/stm32l412/: CMakeLists.txt
